# pmu_axp2101

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
include/: axp2101.h  lilygo_t_sim7080g_power.h  pmu.h  pmu_axp2101.h  pmu_regulators.h  pmu_utils.h
include/boards/: lilygo_t_sim7080g_power.h
src/: axp2101.c  pmu.c  pmu_axp2101.c  pmu_regulators.c
